fix(static): fix a bug where the hero card would have uneven size for heroes with less stats in the compare-players page

--- a/stats/static/stats/styles/compare-players.css
+++ b/stats/static/stats/styles/compare-players.css
@@ -164,9 +164,9 @@
 }
 
 .player-headshot-link:hover .player-headshot {
-  transform: scale(1.02); /* Increase the size on hover */
-  border-color: #262626; /* Change the border color */
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); /* Add a subtle shadow */
+  transform: scale(1.02);
+  border-color: #262626;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .player-first-name {
@@ -246,7 +246,8 @@
 }
 
 .hero-card {
-  width: calc(85% - 10px);
+  width: 480px;
+  height: 330px;
   margin: 10px 20px;
   background-color: #d7d5d5;
   border-radius: 8px;
@@ -299,7 +300,7 @@
   align-items: flex-start;
   width: calc(100% - 20px);
   margin: 5px;
-  transform: translateX(113px);
+  transform: translateX(125px);
   transition: transform 0.5s ease-in-out;
 }
 
